Fix data not showing in Widget [stage-1]

--- a/src/widget/css/spreadsheet.css
+++ b/src/widget/css/spreadsheet.css
@@ -33,3 +33,7 @@ body {
   /* Visual */
   background-color: transparent;
 }
+
+html, body, #app {
+  height: 100%;
+}
